# retirement-python

./: .gitignore
.github/: copilot-instructions.md
retirement/: retire.py  target_fund.py  vanguard.py
spending-observability-platform/: .gitignore  README.md  ROADMAP.md  VISION.md  pyproject.toml  requirements.txt
spending-observability-platform/config/: settings.py  urls.py
spending-observability-platform/money_observability/: admin.py  apps.py  models.py  urls.py  views.py
spending-observability-platform/money_observability/management/commands/: ai_categorize.py  apply_categories.py  apply_exclusions.py  import_transactions.py  uncategorized_top_spend.py  verify.py
spending-observability-platform/money_observability/migrations/: 0001_initial.py  0002_importbatch_source_profile.py  0002_transaction_excluded_transaction_excluded_at_and_more.py  0003_transaction_categorized_at_transaction_category_and_more.py  0004_budget_treatment.py
spending-observability-platform/money_observability/services/: ai_categorize.py  categories.py  category_rules.py  exclusion_rules.py  import_service.py  loaders.py
spending-observability-platform/money_observability/templates/money_observability/: categorize.html  index.html  monthly_summary.html  upload.html
spending-observability-platform/money_observability/tests/: test_apply_categories.py  test_apply_exclusions.py  test_citi_loader.py  test_import_idempotency.py  test_source_profiles.py  test_transaction_identity.py  test_upload_view.py  test_wise_loader.py
spending-observability-platform/rules/: rules.yml
(+6 files in other folders)
