[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spending-observability-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["money_observability*", "config*"]

[tool.django]
settings_module = "config.settings"
